--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-markdown: kramdown
-kramdown:
-  input: GFM
+markdown: redcarpet
 highlighter: rouge
 permalink: /posts/:title.html
 excerpt_separator: "<!-- more -->"
