--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,15 @@ all_categories: [
 
 paginate: 8
 paginate_path: "posts/page:num"
-timezone: America/Los_Angeles
+timezone: Asia/Shanghai
 
+index_layout: "index.html"
+category_layout: "_layouts/category.html"
+
+gems: [jekyll-paginate]
+ 
 collections:
   docs:
     output: true
 
-gems:
- - jekyll-paginate
+
