--- a/_config.yml
+++ b/_config.yml
@@ -3,25 +3,21 @@ highlighter: rouge
 permalink: /:categories/:title.html 
 excerpt_separator: "<!-- more -->"
 
-github: panxw
-author: "panxw"
-email: winfirm#163.com
-name: "Panxw's Blog"
+github: DF-Kyun
+author: "kyun"
+email: dfkyun@gmail.com
+name: "kyun's Blog"
 baseurl: /
-url: http://www.panxw.com
-domain: www.panxw.com
+url: https://df-kyun.github.io
+domain: https://df-kyun.github.io
 
 all_categories: [
-  ["android", "Android开发","/android/index.html"], 
-  ["react", "React Native", "/react/index.html"],
-  ["web", "Web建站","/web/index.html"], 
-  ["linux", "Linux相关","/linux/index.html"],
-  ["git", "git用法","/git/index.html"],
-  ["program", "软件开发","/program/index.html"],
-  ["vps", "VPS","/vps/index.html"],
-  ["other", "杂记","/other/index.html"],
-  ["read", "书摘","/read/index.html"], 
-  ["about", "关于","/about.html"]
+["program", "软件编程","/posts/program.html"],
+["web", "Web建站","/posts/web.html"],
+["linux", "Linux相关","/posts/linux.html"],
+["read", "读书笔记","/posts/read.html"],
+["other", "杂记","/posts/other.html"],
+["about", "关于","/about.html"]
 ]
 
 paginate: 10 
