--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-markdown: kramdown
+markdown: kramdown 
 highlighter: rouge
-permalink: /:categories/:title.html 
+permalink: /posts/:title.html
 excerpt_separator: "<!-- more -->"
 
 github: DF-Kyun
@@ -20,21 +20,17 @@ all_categories: [
 ["about", "关于","/about.html"]
 ]
 
-paginate: 10 
-paginate_path: "index_:num"
+paginate: 4
+paginate_path: "posts/page:num"
+timezone: Asia/Shanghai
 
 index_layout: "index.html"
 category_layout: "_layouts/category.html"
-tag_layout: "_layouts/tag.html"
 
-#不使用gems库中的jekyll-paginate-category
-#使用基于jekyll-paginate改写的的栏目分页插件，所以jekyll-paginate还需要用上。
-#gems: [jekyll-paginate,jekyll-paginate-category]
 gems: [jekyll-paginate]
-
+ 
 collections:
   docs:
     output: true
 
-copyright: []
-#timezone: Asia/Shanghai
+
